--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "rnd_programs"
-version = "0.1.0"
+version = "0.1.3"
+authors = ["TheLazySol"]
 edition = "2021"
 
 [dependencies]
